# Hero-Slot-studio-1

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_with_starter_kit.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  main.py
backend/domain/: ssrf.py
backend/observability/: logfire_setup.py
backend/routes/: __init__.py  fetch_site.py  health.py
backend/schemas/: api.py
backend/scraper/: image_filter.py  palette.py  playwright_scraper.py
backend/services/: fetch_site_service.py  thumbnail.py
backend/tests/integration/: test_health.py
backend/tests/unit/: test_image_filter.py  test_ssrf.py
docs/: API_SPEC.md  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN_SPEC.md  EVAL_SET.md  PRD.md
evals/: prompts.yaml  runner.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: EmptyState.tsx  PreviewIframe.tsx  Toasts.tsx
frontend/src/components/studio/: Canvas.tsx  HeroRender.tsx  Icons.tsx  LeftPanel.tsx  Primitives.tsx  RightSidebar.tsx  Timeline.tsx  Toolbar.tsx  Topbar.tsx  Tweaks.tsx  Variations.tsx  mockData.ts  (+1 more)
frontend/src/engine/: elementSchemas.ts  renderTree.ts
frontend/src/persistence/: db.ts
frontend/src/state/: heroStore.ts  selectionStore.ts  settingsStore.ts  timelineStore.ts  uiStore.ts
frontend/src/tests/: App.test.tsx  setup.ts
scripts/: seed-fixtures.py
